--- a/src/components/TodoItem.module.css
+++ b/src/components/TodoItem.module.css
@@ -1,19 +1,19 @@
-.ToDoItem {
+.TodoItem {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.ToDoItem-Text {
+.TodoItem-Text {
     width: 90%;
-    background-color: white;
+    background-color: rgb(184, 37, 37);
     border: 1px solid lightgrey;
     box-shadow: 1px 1px 1px lightgrey;
     padding: 12px;
     margin-right: 10px;
 }
 
-.ToDoItem-Delete {
+.TodoItem-Delete {
     width: 35px;
     /*padding: 5px;*/
     height: 35px;
@@ -26,7 +26,7 @@
     margin-right: 5px;
 }
 
-.ToDoItem-Delete:hover {
+.TodoItem-Delete:hover {
     box-shadow: none;
     margin-top: 1px;
     margin-left: 1px;
